dockerized app, fixed some bugs, Next: CI piplelines and testing